Ansible勉強会用の更新 #4 - ignitionディレクトリを作成 - 各パッケージを最新版に反映

--- a/roles/package/templates/logrotate/logrotate_nginx.j2
+++ b/roles/package/templates/logrotate/logrotate_nginx.j2
@@ -1,7 +1,7 @@
 /var/log/nginx/*\.log {
     daily
     missingok
-    rotate {{ nginx_rotate_value }}
+    rotate 14
     dateext
     compress
     ifempty
